--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="title_activity_friend">Friend</string>
     <string name="title_activity_facebook">Facebook</string>
     <string name="title_activity_setting">Setting</string>
+    <string name="title_activity_application">Application</string>
     <string name="facebook_app_id">1547265538858226</string>
     <string name="error_dialog_title">Error</string>
     <string name="error_dialog_button_text">OK</string>
